# fast-api-telegram

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
app/src/: main.py  makesuperuser.py
app/src/cache/: services.py
app/src/core/: Dtos.py  __init__.py  api.py  app.py  custom_exceptions.py  dependencies.py  dtos.py  services.py
app/src/core/routers/: admin.py  auth.py
app/src/database/: config.py  models.py  repositories.py
app/src/database/migrations/: env.py
app/src/database/migrations/versions/: 21fbe0aeb8a1_init.py  34e344d741c1_fixtz.py  9430d0ab17f9_altr_passwd_type.py  9de62062daf4_fixtuname_typo.py  f25287e45f43_make_session_and_abstract_base.py
app/src/telegram_bot/: __init__.py  custom_context.py  handler_routes.py  handlers.py
